src/styles/layout/_search-nav.scss
.search-nav {
  padding: 20px 0;
  margin-top: 32px;
  padding-bottom: 0px;
  h2 {
    font-weight: normal;
  }
  .logo {
    width: 172px;
  }

  &-invert {
    h3{
      font-weight: lighter;
    }
    input:focus {
      border: 0px;
      outline: none;
    }
    .small-width-search {
      width: 25%;
      transition: all 0.2s ease-in;
      float: right;
    }
    .full-width-search {
      border: none;
      background: none;
      text-align: left;
      padding-top: 4px;
      padding-bottom: 4px;
      color: $secondary-color;
      width: 100%;
      transition: all 0.2s ease-in;
      position: absolute;
      top: -6px;
      background-color: #000;
      &::placeholder {
        color: $white-color;
        font-weight: lighter;
        font-size: 20px;
        opacity: 0.75;
      }
      &-icon {
        position: absolute;
        right: 5px;
        top: -9px;
      }
    }
    .text-search {
      border: none;
      background: none;
      text-align: left;
      color: $secondary-color;
      &::placeholder {
        color: $secondary-color;
        font-size: 20px;
        font-weight: lighter;
      }
      &-icon {
        position: absolute;
        right: 5px;
        top: -9px;
      }
    }
    .dropdown-btn {
      background: none;
      border: none;
      border-bottom: 1px solid $white-color;
      text-align: left;
      padding: 4px 0;
      width: 90%;
      color: $white-color;
      font-size: 14px;
      font-weight: lighter;
    }
  }
}

//Dropdown
.dropdown {
  &-btn {
    background: none;
    border: none;
    border-bottom: 1px solid $white-color;
    text-align: left;
    padding: 4px 0;
    color: $white-color;
    font-size: 14px;
    font-weight: lighter;
    &-full {
      width: 100%;
    }
    &-half {
      width: 50%;
      display: inline-block;
      border-right: 1px solid rgba(0, 0, 0, 0.15);
    }
  }
  &-container {
    background: white;
    box-shadow: 0 0 3px 0 rgba(0,0,0,0.25), 0 4px 8px 0 rgba(12,0,51,0.1);
    border-radius: 2px;
    position: absolute;
    top: 40px;
    z-index: 10;
    padding: 12px 4px 12px 4px;
    color: $primary-color;
    &-collapse {
      width: 271px;
    }
    &-expand {
      width: 544px;
    }
  }
  &-options{
    border: none;
    background: none;
    color: $primary-color;
    padding: 8px 12px 8px 12px;
    font-size: 16px !important;
    text-align: left;
    width: 100%;
    span {
      width: 90%;
      float: left;
    }
    &:hover {
      background-color: $seconday-color-opacity;
    }
    &:focus {
      outline: none;
    }
    &-icon {
      float: right;
    }
  }
  &-sub-container {
    background: white;
    border:0px;
    position: absolute;
    top: 0px;
    right: 0px;
    z-index: 10;
    padding: 12px 4px 12px 4px;
    color: $primary-color;
    width: 48%
  }
}

.search {
  &-text-form {
    position: relative;
  }
  &-filter{
    &-label {
      background-color: $white-color;
      color: $primary-color;
      width: 15%;
      border-radius: 16px;
      padding: 2px 11px 2px 9px;
      font-size: 14px !important;
      font-weight: bold !important;
      margin-right: 8px;
    }
    &-icon {
      margin-left: 12px;
    }
    &-clear {
      color: $white-color;
      opacity: 0.75;
      padding-left: 8px;
    }
  }
}
.filter-label {
  &-container-show {
    width: 66%;
    display: initial;
  }
  &-container-hide {
    display: none;
  }
}
.filterSelectContainer {
  position: relative;
}
.filterSelect:active, .filterSelect:focus {
  outline: none;
}
.filterSelect_icon {
  position: absolute;
  right: 20px;
  top: 5px;
}

.hide-filter {
  display: none;
  transition: all 0.4s ease-out;
}
.show-filter {
  display: initial;
  transition: all 0.4s ease-in;
}
.option-dropdown-show {
  display: initial;
  position: absolute;
  transition: all 0.4s ease-in;
  left: 0px;
  top: 100%;
  z-index: 8;
  background-color: #4A4A4A;
  padding-left: 20px;
  padding-right: 20px;
  img {
    float: right;
  }
}
.option-dropdown-list {
    list-style: none;
    width: 416px;
    padding: 8px;
    color:#fff;
}

